Bug 155894 - IMAP unread message count is not updated on first select
Summary: IMAP unread message count is not updated on first select
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: IMAP (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-01-16 10:43 UTC by FiNeX
Modified: 2008-02-01 23:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2008-01-16 10:43:04 UTC
Version:           Revision 762022 (using Devel)
Installed from:    Compiled sources

On KMail, IMAP folders message count is not immediatly updated.
The first time you load an IMAP folder, the "unread" counter show the number of ALL mails in it, not only the unread.
You have to click to another folder and re-click on the first for updating the counter.
Comment 1 Till Adam 2008-02-01 23:50:01 UTC
SVN commit 769730 by tilladam:

Properly update the status (including emitting signals) when it changes
on the server.

BUG: 155894


 M  +5 -4      kmfolderimap.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=769730