Properly update the status (including emitting signals) when it changes on the server.

BUG: 155894

svn path=/trunk/KDE/kdepim/; revision=769730